tests/sksl/errors/ArrayOfVoidInStruct.glsl
### Compilation failed:

error: 4: opaque type 'void' is not permitted in a struct
error: 5: opaque type 'void' is not permitted in a struct
error: 6: multi-dimensional arrays are not supported
3 errors
